static/css/css.css
/* ... */
.block-btn:hover {
    background-color: #ea580c;
}

.transfer-btn {
    background-color: #3b82f6; /* Blue */
}
.transfer-btn:hover {
    background-color: #2563eb;
}

.add-btn {
    background-color: #10b981; /* Emerald */
}
.add-btn:hover {
    background-color: #059669;
}

.delete-btn {
    background-color: #ef4444; /* Red */
}
.delete-btn:hover {
    background-color: #dc2626;
}

.close-btn {
    background-color: #6b7280; /* Gray */
}
.close-btn:hover {
    background-color: #4b5563;
}

.card-not-blocked {
    border:5px solid green;
    
}

.card-is-blocked {
    background: red;
}

#transfer-amount-card {
    position: fixed;
    top: 0;
    background: white;
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.3s ease-in-out, visibility 0s 0.3s;
    z-index: 1001;
}

#transfer-amount-card {
    width: 70%;
    padding: var(--size-md);
    box-shadow: var(--box-shadow);
    border: 4px solid lavender;
}


#transferring-card,
#transferring-to {
    transform: scale(0.75);
}

#transference h1 {
    transform: scale(0.7);
}

#transferring-card h1,
#transferring-to h1 {
    transform: scale(0.9);
    border: 1px solid blue;
}


.account-summary {
    background: ghostwhite;
    padding-top: var(--size-sm);
}

#account-transfer,
#no-entry {
    border: 2px solid lavender;
    margin-top: 2px;
    height: 200px;
    margin-top: var(--size-md);
}

#cards-to-transfer-to-container .bank-card {
    margin: auto;
}

#transfer-from-card-btn {
    width: 50%;
    padding: var(--size-sm);
    font-size: 0.8rem;
    font-weight: 500;
    background: var(--background-primary);
    color: white;
}



#transfer-amount-card-img {
    height: 250px;
    width: 250px;
    opacity: 0.7;
    margin-top: var(--size-xlg);
}

#select-card-div.show {
    display: grid;
}
#select-card-div {
    display: none;
}

